# MPGB

./: .gitignore  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  Cartridge.cpp  Cartridge.h  CartridgeHeader.cpp  CartridgeHeader.h  Cycles.cpp  DMA.cpp  DMA.h  Graphics.cpp  Instruction.h  InstructionFunc.cpp  InterruptFlag.h  Joypad.cpp  LICENSE  MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  Mapper.cpp  Mapper.h  NoMBC.cpp  NoMBC.h  PPU.cpp  PPU.h  README.md  Shader.cpp  Shader.h  arithmetic16.cpp  arithmetic8.cpp  bitflag.cpp  bitflag.h  bitshift.cpp  bitshift.h  bitwise.cpp  bitwise.h  (+12 more)
.github/workflows/: build.yml
ext/: CMakeLists.txt
ext/include/glad/: gl.h  gles2.h
include/mpgb/: CPU.h  Cartridge.h  Cycles.h  Graphics.h  InstructionFunc.h  Joypad.h  OBJ.h  Print.h
include/mpgb/instr/: arithmetic16.h  arithmetic8.h  jump.h  load.h  utils.h
include/mpgb/mapper/: MBC1.h  MBC2.h  MBC3.h  Mapper.h  NoMBC.h
web/: index.css  index.html  index.js
